--- a/flyway.properties
+++ b/flyway.properties
@@ -1,3 +1,5 @@
 flyway.user=root
 flyway.password=admin
 flyway.schemas=stvc
+flyway.url=jdbc:h2:mem:DATABASE
+flyway.locations=filesystem:db/migration
