--- a/pom.xml
+++ b/pom.xml
@@ -42,8 +42,13 @@
             <!-- mysql connector -->
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <scope>runtime</scope>
+			<version>8.0.20</version>
         </dependency>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>servlet-api</artifactId>
+			<version>2.5</version>
+		</dependency>
 	</dependencies>
 
 	<build>
