--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,7 +9,7 @@
 
 	<context-param>
 		<param-name>resteasy.resources</param-name>
-		<param-value>com.stvc.api.Content</param-value>
+		<param-value>com.stvc.api.MovieService</param-value>
 	</context-param>
 
 	<listener>
